refactor: reducing code cartmapper